# mcp-gateway

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  Roadmap.md  main.py  makefile  pyproject.toml
.cursor/: mcp.json
.cursor/rules/: global.mdc  lint_py.mdc  python.mdc
.github/: owners
api/: __init__.py  enums.py  mcp.py
docs/: api_docs.yaml
myunla/: alembic.ini  app.py
myunla/config/: __init__.py  apiserver_config.py  notifier_config.py  session_config.py
myunla/controllers/: auth.py  auth_utils.py  mcp.py  mcp_utils.py  openapi.py  tenant.py
myunla/dsl/: README.md  __init__.py  context.py  examples.py  executor.py  functions.py  lexer.py  parser.py  types.py
myunla/gateway/: base.py  response_utils.py  server.py  state.py  state_loader.py
myunla/gateway/notifier/: __init__.py  api_notifier.py  composite_notifier.py  enums.py  factory.py  notifier.py  redis_notifier.py  signal_notifier.py
myunla/gateway/session/: README.md  __init__.py  memory.py  redis.py  session.py
myunla/gateway/transports/: README.md  __init__.py  base.py  sse.py  stdio.py  streamable.py
myunla/migration/: env.py
myunla/migration/versions/: 20250704040158-b69f9797db65.py  20250709013311-e33f449b3963.py  20250710002202-73dfe2c12e33.py  20250713005754-ce8d5b360f13.py
myunla/models/: __init__.py  base.py  user.py
myunla/repos/: __init__.py  auth.py  base.py  mcp.py
myunla/schema/: auth_schema.py  mcp.py  tenant_schema.py
myunla/templates/: context.py  render_mcp.py
myunla/utils/: __init__.py  auth.py  bootstrap.py  i18n.py  logger.py  mcp.py  redis_utils.py
oas/: conv.py  petstore.v3.yaml
scripts/: README.md  fix_blank_lines.py  get_api_docs.py  run_milvus_mcp.py  setup-precommit.sh  start_servers.py
tests/: README.md  conftest.py  conftest_original.py  pytest.ini  run_specific_test.py  test_dsl.py  test_helpers.py
tests/integration/: test_auth_integration.py  test_dsl_integration.py
tests/scripts/: __init__.py  run_tests.py
tests/unit/: test_controllers.py  test_dsl_functions.py  test_dsl_lexer.py  test_dsl_parser.py  test_models.py  test_utils.py
web/: README.md  eslint.config.js  index.html  mutator.ts  orval.config.ts  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
web/src/: App.vue  app.tsx  main.ts  style.css
web/src/api/: mutator.ts
web/src/components/: Dashboard.vue  GatewayConfig.vue  Header.vue  Layout.vue  Login.vue  McpConfig.vue  Sidebar.vue  TenantManagement.vue  UserManagement.vue
web/src/router/: index.ts
web/src/stores/: auth.ts  mcp.ts  users.ts
